CSS fix with overflow

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -28,7 +28,7 @@ html, body {
    font-family: "Helvetica",Helvetica,sans-serif;
    color: #4d4d4d;
    height: 100%;
-   overflow-x: hidden;
+   overflow-x: visible;
    background-color: #f5f5f5;
 }
 
@@ -709,6 +709,6 @@ hr {
         display: block!important;
     }
     .collapsing {
-        overflow: hidden!important;
+        overflow: visible!important;
     }
 }
